style.css
:root {
  --primary--color--: #e6e6ff;
  /* --secondary--color--: #e6e6ff; */
  --liked--color--: #0000e6;
  --white--color: #fff;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
  font-family: "Roboto", sans-serif;
}

body {
  background-color: var(--primary--color--);
  display: flex;
}

#app {
  width: 100%;
  opacity: 0;
  transition: all 0.8s;
}

.loader {
  width: 10rem;
  height: 10rem;
  border: 0.5rem solid #fff;
  border-bottom-color: #ff3d00;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
  position: absolute;
  top: 50%;
  right: 50%;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
/*  -------------------- NAVIGATION --------------------*/

.main__navigation {
  background-color: var(--white--color);
  height: 4%;
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  border-bottom: 1px solid var(--primary--color--);
  position: relative;
}

.main__navigation button img {
  height: 100%;
  border: none;
  appearance: none;
  outline: transparent solid 2px;
}

.main__navigation button {
  padding: 0;
  border: none;
  background: none;
  border-radius: 1rem;
  transition: all 0.3s;
  cursor: pointer;
}

.main__navigation button:hover {
  filter: brightness(0.94);
}

.logo__img {
  height: 100%;
  display: flex;
  align-items: center;
  margin-left: 1rem;
}

.logo__img img {
  height: 100%;
  cursor: pointer;
}

.logo__img input {
  margin-left: 1rem;
  height: 65%;
  border-radius: 2rem;
  border: none;
  background-color: var(--primary--color--);
  font-size: 1.6rem;
  padding-left: 1rem;
  appearance: none;
  outline: transparent 2px solid;
}

.log__out__container {
  /* border: 1px solid black; */
  width: 20rem;
  position: absolute;
  top: 8rem;
  right: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--white--color);
  border-radius: 1.6rem;
  border: 2px solid var(--primary--color--);
  transition: all 0.3s;
  transform: scale(0.8);
  visibility: hidden;
  opacity: 0;
}

.my__profile,
.log__out {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 2rem;
  padding:1rem;
  width: 100%;
  border-radius: 1.6rem;
  cursor: pointer;
}

.my__profile svg,
.log__out svg {
  width: 5rem;
  height: 5rem;
  background-color: var(--primary--color--);
  border-radius: 1.6rem;
  padding: 0.5rem;
}

.my__profile:hover, .log__out:hover {
  background-color: var(--primary--color--);
}



.visible{
  visibility: visible;
  opacity: 1;
  transform: none;
}

/*  -------------------- MAIN --------------------*/
main {
  height: 60rem;
  margin-bottom: 2rem;
}
.user {
  margin: 0 auto;
  width: 100%;
  /* border: 1px solid black; */
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  background-color: var(--white--color);
}

.user__cover__photo {
  /* border: 1px solid black; */
  width: 80%;
  height: 80%;
  background-color: var(--primary--color--);
  border-radius: 0 0 2rem 2rem;
}

.user__profile {
  /* border: 1px solid black; */
  height: 20%;
  width: 70%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
}

.user__profile img {
  height: 50px;
}

.user__info {
  height: 100%;
  display: flex;
  /* border: 1px solid black; */
  justify-content: space-between;
  position: relative;
}

.user__info span {
  position: relative;
  width: 18rem;
  height: 18rem;
}

.user__info span img {
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0%;
  top: -50%;
  border: 5px solid var(--white--color);
  border-radius: 50%;
}

.user__edit {
  min-width: 15%;
  display: flex;
  justify-content: space-between;
  background-color: var(--primary--color--);
  font-size: 1.6rem;
  font-weight: bold;
  align-items: center;
  padding: 1rem 2rem;
  border-radius: 1rem;
  align-self: flex-end;
  cursor: pointer;
  margin-bottom: 1rem;
}

.user__edit:hover {
  background-color: #ccccff;
}

.user__edit img {
  height: 100%;
}

.user__text {
  height: 100%;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.user__text h1 {
  font-size: 3rem;
}

.user__text h2,
.user__text h3 {
  font-weight: normal;
}

/* --------------- FRIENDS SECTION ------------------ */

.friends__section {
  display: flex;
  width: 80%;
  margin: 0 auto;
}

.friends {
  width: 60rem;
  height: 55rem;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 1rem;
  padding: 1.6rem;
  background-color: var(--white--color);
}

.friends h2 {
  font-size: 2rem;
}

.friends p {
  font-size: 1.6rem;
  margin-top: 0.5rem;
}

.posts {
  width: 50%;
  border-radius: 1rem;
  height: 50rem;
  background-color: var(--white--color);
}

.friends__info {
  width: 30%;
  /* border: 1px solid black; */
  display: flex;
  flex-direction: column;
  margin: 0 2rem 2rem 2rem;
  /* align-items: center; */
}

.friend__list {
  list-style: none;
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
  place-content: center;
  align-items: center;
  height: 90%;
}

.friend__list li {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.friend__list li img {
  width: 18rem;
  height: 18rem;
  border-radius: 2rem;
  object-fit: cover;
}

.friend__list__item p {
  margin-bottom: 1rem;
}

/* --------------------- POSTS ---------------------*/

.posts {
  padding: 1rem;
  background-color: var(--primary--color--);
  list-style: none;
}

.posts li {
  background-color: var(--white--color);
  border-radius: 1.6rem;
  padding: 0.5rem;
  margin-bottom: 2rem;
}

.post {
  width: 100%;
  height: 15rem;
  /* border: 1px solid black; */
  border-radius: 1.6rem;
  background-color: var(--white--color);
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.post__info {
  /* border: 1px solid black; */
  display: flex;
  width: 50%;
}

.user__post__info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.5rem;
}

.user__post__info h2 {
  font-size: 1.8rem;
}

.user__post__info p {
  font-size: 1.2rem;
}

.post__info img {
  width: 5rem;
  height: 5rem;
}

.post__text {
  /* border: 1px solid black; */
  font-size: 1.6rem;
}

.likes__comments__number {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.liked__by {
  font-size: 1.6rem;
  width: 50rem;
}

.likes__comments__number svg {
  width: 2.5rem;
  height: 2.5rem;
}

.like__button__container {
  width: 5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.6rem;
}

.comment__container {
  display: flex;
  width: 10rem;
  justify-content: space-between;
  align-items: center;
  font-size: 1.6rem;
  cursor: pointer;
  border-bottom: 1px solid transparent;
}

.comment__container:hover {
  border-bottom: 1px solid var(--primary--color--);
}

.post__buttons {
  height: 5rem;
  display: flex;
  justify-content: space-between;
}

.like__button__div,
.comment__button__div {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--white--color);
  cursor: pointer;
  border-top: 1px solid var(--primary--color--);
  border-bottom: 1px solid var(--primary--color--);
  transition: 0.3s;
  border-radius: 1.6rem;
}

.liked {
  color: var(--liked--color--);
  fill: var(--liked--color--);
}

.like__button__div:hover,
.comment__button__div:hover {
  background-color: var(--primary--color--);
}

.like__button__div svg {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.5rem;
}

.like__button__div p {
  margin-left: 0.5rem;
  font-size: 1.6rem;
}

.comment__button__div svg {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.5rem;
}

.comment__button__div p {
  margin-left: 0.5rem;
  font-size: 1.6rem;
}

.comment__section img,
.comment__section__addComment img {
  width: 4rem;
  height: 4rem;
}

.comment__section__addComment {
  /* border: 1px solid black; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;
  height: 40%;
  padding: 0 1rem;
}

.comment__section__addComment input {
  width: 93%;
  height: 75%;
  padding: 1rem;
  border-radius: 1rem;
  border: none;
  background-color: var(--primary--color--);
}

.comments__button {
  cursor: pointer;
}

.comment__info {
  /* border: 1px solid black; */
  display: flex;
  justify-content: space-between;
  padding: 0 1rem;
  margin-top: 1rem;
  align-items: center;
  /* height: 10rem; */
}

.comment__info img {
  border-radius: 50%;
}

.comment {
  /* border: 1px solid black; */
  width: 93%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--white--color);
  border-radius: 1.6rem;
}

.comment h2 {
  font-size: 1.6rem;
  padding-left: 1rem;
}

.comment p {
  background-color: var(--primary--color--);
  padding: 1rem;
  border-radius: 1.6rem;
  margin-top: 0.5rem;
  font-size: 1.4rem;
}

.hidden {
  display: none;
}

